# WaveletFEM

./: .gitignore  CMakeLists.txt  README.md
delivery/: CMakeLists.txt  readme.md
delivery/src/: daubechies.h
results/: heat_evolution.gp
scripts/: check_deps.ps1  check_deps.sh
src/: connection_coeff.cpp  connection_coeff.h  daubechies.cpp  daubechies.h  examples.cpp  examples.h  gnuplot_output.cpp  gnuplot_output.h  main.cpp  types.h  wavelet_fem.cpp  wavelet_fem.h
